crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaMavlinkDialect PamojaMavlinkDialect;
typedef struct PamojaMavlinkFrame PamojaMavlinkFrame;
typedef struct PamojaMavlinkParser PamojaMavlinkParser;
typedef struct PamojaMavlinkSigner PamojaMavlinkSigner;
typedef struct PamojaMavlinkVerifier PamojaMavlinkVerifier;
typedef struct {
  const char *type_name;
  const char *field_name;
  uint8_t array_len;
} PamojaMavlinkField;
typedef struct {
  uint8_t system_id;
  uint8_t component_id;
  uint8_t sequence;
} PamojaMavlinkHeader;
uint16_t pamoja_mavlink_crc16_mcrf4xx(const uint8_t *bytes, uintptr_t bytes_len);
PamojaStatus pamoja_mavlink_message_crc_extra(const char *name,
                                              const PamojaMavlinkField *fields,
                                              uintptr_t field_count,
                                              uint8_t *out_crc_extra);
PamojaStatus pamoja_mavlink_known_crc_extra(uint32_t msgid, uint8_t *out_crc_extra);
PamojaMavlinkDialect *pamoja_mavlink_dialect_new(void);
PamojaStatus pamoja_mavlink_dialect_add(PamojaMavlinkDialect *dialect,
                                        uint32_t msgid,
                                        uint8_t crc_extra);
PamojaStatus pamoja_mavlink_dialect_crc_extra(const PamojaMavlinkDialect *dialect,
                                              uint32_t msgid,
                                              uint8_t *out_crc_extra);
void pamoja_mavlink_dialect_free(PamojaMavlinkDialect *dialect);
PamojaStatus pamoja_mavlink_frame_encode(uint8_t version,
                                         PamojaMavlinkHeader header,
                                         uint32_t msgid,
                                         const uint8_t *payload,
                                         uintptr_t payload_len,
                                         uint8_t crc_extra,
                                         PamojaMavlinkFrame **out_frame);
PamojaStatus pamoja_mavlink_frame_parse(const uint8_t *bytes,
                                        uintptr_t bytes_len,
                                        uint8_t crc_extra,
                                        PamojaMavlinkFrame **out_frame);
PamojaStatus pamoja_mavlink_frame_parse_known(const uint8_t *bytes,
                                              uintptr_t bytes_len,
                                              const PamojaMavlinkDialect *dialect,
                                              PamojaMavlinkFrame **out_frame);
void pamoja_mavlink_frame_free(PamojaMavlinkFrame *frame);
uint8_t pamoja_mavlink_frame_version(const PamojaMavlinkFrame *frame);
PamojaStatus pamoja_mavlink_frame_header(const PamojaMavlinkFrame *frame,
                                         PamojaMavlinkHeader *out_header);
uint32_t pamoja_mavlink_frame_message_id(const PamojaMavlinkFrame *frame);
uint8_t pamoja_mavlink_frame_incompat_flags(const PamojaMavlinkFrame *frame);
uint8_t pamoja_mavlink_frame_is_signed(const PamojaMavlinkFrame *frame);
const uint8_t *pamoja_mavlink_frame_payload(const PamojaMavlinkFrame *frame, uintptr_t *out_len);
const uint8_t *pamoja_mavlink_frame_bytes(const PamojaMavlinkFrame *frame, uintptr_t *out_len);
PamojaStatus pamoja_mavlink_frame_signature(const PamojaMavlinkFrame *frame,
                                            uint8_t *out_signature);
PamojaMavlinkParser *pamoja_mavlink_parser_new(void);
PamojaStatus pamoja_mavlink_parser_push(PamojaMavlinkParser *parser,
                                        const uint8_t *bytes,
                                        uintptr_t bytes_len,
                                        const PamojaMavlinkDialect *dialect);
PamojaStatus pamoja_mavlink_parser_next(PamojaMavlinkParser *parser,
                                        PamojaMavlinkFrame **out_frame);
uintptr_t pamoja_mavlink_parser_pending(const PamojaMavlinkParser *parser);
void pamoja_mavlink_parser_free(PamojaMavlinkParser *parser);
uint64_t pamoja_mavlink_timestamp_from_unix_micros(uint64_t unix_micros);
PamojaStatus pamoja_mavlink_signer_new(const uint8_t *key,
                                       uint8_t link_id,
                                       uint64_t timestamp,
                                       PamojaMavlinkSigner **out_signer);
PamojaStatus pamoja_mavlink_signer_sign(PamojaMavlinkSigner *signer,
                                        PamojaMavlinkHeader header,
                                        uint32_t msgid,
                                        const uint8_t *payload,
                                        uintptr_t payload_len,
                                        uint8_t crc_extra,
                                        PamojaMavlinkFrame **out_frame);
uint8_t pamoja_mavlink_signer_link_id(const PamojaMavlinkSigner *signer);
void pamoja_mavlink_signer_free(PamojaMavlinkSigner *signer);
PamojaStatus pamoja_mavlink_verifier_new(const uint8_t *key, PamojaMavlinkVerifier **out_verifier);
PamojaStatus pamoja_mavlink_verifier_set_window(PamojaMavlinkVerifier *verifier, uint64_t window);
PamojaStatus pamoja_mavlink_verifier_verify(PamojaMavlinkVerifier *verifier,
                                            const PamojaMavlinkFrame *frame);
void pamoja_mavlink_verifier_free(PamojaMavlinkVerifier *verifier);
PamojaStatus pamoja_mavlink_raw_message_to_frame(PamojaMavlinkHeader header,
                                                 uint32_t msgid,
                                                 uint8_t crc_extra,
                                                 const uint8_t *payload,
                                                 uintptr_t payload_len,
                                                 PamojaMavlinkFrame **out_frame);